--- a/Backend/config/.env
+++ b/Backend/config/.env
@@ -1,6 +1,8 @@
-PORT=8080
-DB_URI=mongodb://localhost:27017/multifactorAuth
-JWT_SECRET=jwtSecret
-TWILIO_ACCOUNT_SID=AC1b91883723c32725fe4cb9adbf45e715
-TWILIO_AUTH_TOKEN=f0a1b50e16c45a1f39446c1e8388eed3
-TWILIO_PHONE_NUMBER=+19208243914
+; Add your twilio account details and port as you wish
+
+PORT=
+DB_URI=
+JWT_SECRET=
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE_NUMBER=
